# super-lazy-clangd

./: .gitignore  .gitmodules  README.md  meson.build
src/: grep_search.cpp  grep_search.h  lsp_server.cpp  lsp_server.h  lsp_transport.cpp  lsp_transport.h  main.cpp  uri.cpp  uri.h
tools/: lsp_query.py  lsp_smoke.py
